MDEV-6153 Trivial Lintian errors in MariaDB sources: spelling errors and wrong executable bits