sql/handler.h
@@ -1610,7 +1610,7 @@ struct HA_CREATE_INFO
     For ALTER TABLE defaults to ROW_TYPE_NOT_USED (means "keep the current").
 
     Can be changed either explicitly by the parser.
-    If nothing speficied inherits the value of the original table (if present).
+    If nothing specified inherits the value of the original table (if present).
   */
   enum row_type row_type;
   enum ha_choice transactional;
